<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:foregroundGravity="center_vertical"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewLoginFragmentlogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:foregroundGravity="center_vertical|center|center_horizontal"
                android:visibility="visible"
                app:srcCompat="@mipmap/main_foreground"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/textViewUsuarioFragmentlogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:foregroundGravity="center_vertical|center|center_horizontal"
                android:text="@string/usuario_literal" />

            <EditText
                android:id="@+id/loginUsuarioFragmentlogin"
                android:layout_width="263dp"
                android:layout_height="45dp"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="1dp"
                android:editable="true"
                android:foregroundGravity="center_vertical|center|center_horizontal" />

            <TextView
                android:id="@+id/textView4Fragmentlogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:foregroundGravity="center_vertical|center|center_horizontal"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/password_literal"
                app:emojiCompatEnabled="false" />

            <EditText
                android:id="@+id/loginPasswordFragmentlogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:foregroundGravity="center_vertical|center|center_horizontal"
                android:inputType="textPassword" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:foregroundGravity="center_vertical|center|center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonLogin2Fragmentlogin"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    android:foregroundGravity="center_vertical|center|center_horizontal"
                    android:text="@string/login_literal" />

                <CheckBox
                    android:id="@+id/checkBoxRecordarFragmentlogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    android:foregroundGravity="center_vertical|center|center_horizontal"
                    android:text="@string/recordar_literal" />

            </LinearLayout>

            <Button
                android:id="@+id/buttonForbiddenButtonFragmentlogin"
                android:layout_width="91dp"
                android:layout_height="48dp"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:backgroundTint="#E33636"
                android:foregroundGravity="center_vertical|center|center_horizontal"
                android:shadowColor="#EC0E0E"
                android:text="nuke"
                android:textColor="#FFFFFF"
                app:strokeColor="#DD1818" />

            <Button
                android:id="@+id/buttonRegistrarseFragmentlogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="66dp"
                android:text="@string/registrar_literal" />

            <Button
                android:id="@+id/buttonVolverFragmentoLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/previous" />

        </LinearLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group3Fragmentlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="scrollView2Fragmentlogin,buttonRegistrarseFragmentloginFragmentlogin,textViewUsuario"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>